crates/parser/tests/snapshots/parser__garbage_rgba_value_3.snap
---
created: "2019-08-19T03:04:37.499955Z"
creator: insta@0.10.1
source: parser/tests/parser.rs
expression: "format!(\"{}\" , e)"
---
Error: 0: at line 1, in MapRes:
$a: rgba(0, 300, 255, 0.5)
            ^

1: at line 1, in Value between 0 - 255:
$a: rgba(0, 300, 255, 0.5)
            ^

2: at line 1, in RGBA Value:
$a: rgba(0, 300, 255, 0.5)
    ^

3: at line 1, in Variable:
$a: rgba(0, 300, 255, 0.5)
^


